# systemd-netlogd

./: .editorconfig  .gitignore  .lgtm.yml  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  Makefile  Makefile.am  PKGBUILD  README.md  SECURITY.md  TESTING.md  TODO  UNID.1  autogen.sh  configure.ac  meson.build  meson_options.txt  systemd-netlogd.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp.yml  ci.yml
conf/: netlogd.conf.in  systemd-netlogd.conf.in
debian/: changelog  control  copyright  install  rules  systemd-netlogd.postinst
doc/: conf.py  index.rst  meson.build
examples/: README.md  basic-tcp.conf  basic-udp.conf  cloud-loggly.conf  cloud-papertrail.conf  cloud-splunk.conf  development.conf  docker-compose.yml  dtls-encrypted.conf  filtering.conf  high-performance.conf  namespace.conf  structured-data.conf  tls-production.conf  tls-secure.conf
m4/: .gitignore
man/: systemd-netlogd.conf.xml
src/: .gitignore  alloc-util.c  alloc-util.h  build.h  capability-util.c  capability-util.h  conf-files.c  conf-files.h  conf-parser.c  conf-parser.h  def.h  dirent-util.c  dirent-util.h  escape.c  escape.h  extract-word.c  extract-word.h  fd-util.c  fd-util.h  fileio.c  fileio.h  formats-util.h  fs-util.c  fs-util.h  hash-funcs.c  hash-funcs.h  hashmap.c  hashmap.h  hexdecoct.c  hexdecoct.h  in-addr-util.c  in-addr-util.h  io-util.c  io-util.h  list.h  log.c  log.h  macro.h  mempool.c  mempool.h  (+53 more)
src/netlog/: netlog-conf.c  netlog-conf.h  netlog-dtls.c  netlog-dtls.h  netlog-gperf.gperf  netlog-journal.c  netlog-journal.h  netlog-manager.c  netlog-manager.h  netlog-network.c  netlog-network.h  netlog-protocol.c  netlog-protocol.h  netlog-ssl-common.c  netlog-ssl-common.h  netlog-ssl.c  netlog-ssl.h  netlog-state.c  netlog-state.h  netlog-tls.c  netlog-tls.h  systemd-netlogd.c
src/share/: alloc-util.c  alloc-util.h  build.h  capability-util.c  capability-util.h  conf-files.c  conf-files.h  conf-parser.c  conf-parser.h  def.h  dirent-util.c  dirent-util.h  dns-domain.c  dns-domain.h  escape.c  escape.h  extract-word.c  extract-word.h  fd-util.c  fd-util.h  fileio.c  fileio.h  formats-util.h  fs-util.c  fs-util.h  hash-funcs.c  hash-funcs.h  hashmap.c  hashmap.h  hexdecoct.c  hexdecoct.h  hostname-util.c  hostname-util.h  in-addr-util.c  in-addr-util.h  io-util.c  io-util.h  ioprio.h  iovec-util.c  iovec-util.h  (+57 more)
tests/: meson.build  test-protocol.c  test-string-tables.c
units/: .gitignore  meson.build  systemd-netlogd.service.in
